made the homepage and the about us page look nice.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,31 +5,87 @@
     <title></title>
   </head>
   <body>
-    <div class="column1">
-      <p>
-        Essential Nutrition provides nutrition counseling and wellness coaching in
-        the Durham and Chapel Hill, NC area.
-      </p>
-      <p>
-        A staff of two specialists offer services at this site. Each is a licensed
-        Dietitian/Nutritionist but also have particular expertise. The owner, Kay Pratt,
-        is also a Wellness Coach. Dr. Susan Lutz specializes in pediatric and adolescent nutrition.
-        There are many different reasons you might seek their counseling and services.
-      </p>
-      <p>
-        Do you need help following a special diet for diabetes, high blood pressure,
-        lowering your cholesterol, or weight loss? Do you have irritable bowel
-        syndrome or other gastrointestinal problems? Do you need more energy that
-        balanced healthy eating can bring? Are you trying to maximize your athletic
-        performance through nutrition? Are you dealing with an eating disorder
-        and need guidance and support for a healthier path? Or, do you want to
-        improve several areas of your lifestyle and want guidance and coaching
-        to meet your vision and goals? Read more about our counseling services.
-        Essential Nutrition  uses scientific evidence to help you establish habits
-        for choosing, preparing and eating delicious and wholesome foods. Making
-        small, sustainable lifestyle changes can improve your health. We will guide
-        and coach you to achieve your goals to better health.
-      </p>
+
+    <div class="blog-card">
+    	<div class="photo photo1"></div>
+    	<div class="description">
+    		<h1>Essential Nutrition</h1>
+    		<h2>Essential Nutrition provides nutrition counseling and wellness coaching</h2>
+    		<p class="summary">
+          A staff of two specialists offer services at this site. Each is a licensed
+          Dietitian/Nutritionist but also have particular expertise. The owner, Kay Pratt,
+          is also a Wellness Coach. Dr. Susan Lutz specializes in pediatric and adolescent nutrition.
+          There are many different reasons you might seek their counseling and services.
+        </p>
+    	</div>
+    </div>
+    <div class="blog-card alt">
+    	<div class="photo photo2"></div>
+    	<div class="description">
+    		<p class="summary">
+          Do you need help following a special diet for diabetes, high blood pressure,
+          lowering your cholesterol, or weight loss? Do you have irritable bowel
+          syndrome or other gastrointestinal problems? Do you need more energy that
+          balanced healthy eating can bring? Are you trying to maximize your athletic
+          performance through nutrition? Are you dealing with an eating disorder
+          and need guidance and support for a healthier path? Or, do you want to
+          improve several areas of your lifestyle and want guidance and coaching
+          to meet your vision and goals? Read more about our counseling services.
+          Essential Nutrition  uses scientific evidence to help you establish habits
+          for choosing, preparing and eating delicious and wholesome foods. Making
+          small, sustainable lifestyle changes can improve your health. We will guide
+          and coach you to achieve your goals to better health.
+        </p>
+    	</div>
+    </div>
+
+    <div class="blog-card">
+    	<div class="photo photo1"></div>
+    	<div class="description">
+    		<h1>WHAT OTHERS SAY........</h1>
+    		<p class="summary">
+          "My nutritionist at Essential Nutrition provided the best consult I
+          have ever had. She did not harass me about my weight or act like
+          'a know it all' about what would work for me. She listened attentively
+          to support and helped me come to decisions for success."
+          Izy Obi
+        </p>
+    	</div>
+    </div>
+
+    <div class="blog-card alt">
+    	<div class="photo photo2"></div>
+    	<div class="description">
+        <h1>Contact Us</h1>
+
+    		<p class="summary">
+          <div>
+            phone: (919) 923-6874
+          </div>
+          <div>
+            fax: (919) 237-9214
+          </div>
+          <div>
+            email: essentialnutrition@nc.rr.com
+          </div>
+          <div>
+            1829 East Franklin Street,
+          </div>
+          <div>
+            Suite 1200 A,
+          </div>
+          <div>
+            Chapel Hill, NC, 27517
+          </div>
+        </p>
+    	</div>
+    </div>
+
+
+
+
+
+    <!-- <div class="column1">
       <p>
         We are participating providers for BCBS, Duke and other insurance companies.
         Call or email to inquire about eligibility.
@@ -38,19 +94,10 @@
       <p>
         WHAT OTHERS SAY........
       </p>
-      <span class="whatOthersSay">
 
-        <p>
-          "My nutritionist at Essential Nutrition provided the best consult I
-          have ever had. She did not harass me about my weight or act like
-          'a know it all' about what would work for me. She listened attentively
-          to support and helped me come to decisions for success."
-          Izy Obi
-        </p>
-      </span>
-</div>
+</div> -->
 
-<div class="column2">
+<!-- <div class="column2">
 
     <table class="indeximg">
       <tr>
@@ -62,7 +109,7 @@
         </td>
         <td>Name</td>
       </tr>
-</table>
+</table> -->
 
 
 
@@ -70,40 +117,8 @@
     <!-- <img src="http://i.imgur.com/Xyat8pA.jpg" alt="" /> -->
     <!-- <img src="http://i.imgur.com/rnVZGwy.jpg" width="160" height="170" alt="" /> -->
 
-  </div>
-  <span class="contact">
-    <p>
-      Contact Information
-    </p>
-    <p>
-      phone: (919) 923-6874
-    </p>
-    <p>
-      fax: (919) 237-9214
-    </p>
-    <p>
-      email: essentialnutrition@nc.rr.com
-    </p>
-  </span>
-  <span class="location">
-    <p>
-      Location
-    </p>
-    <p>
-      1829 East Franklin Street,
-    </p>
-    <p>
-      Suite 1200 A,
-    </p>
-    <p>
-      Chapel Hill,
-    </p>
-    <p>
-      NC, 27514
-    </p>
-  </span>
-
-</div>
+  <!-- </div>
+</div> -->
 
 
 
