--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,10 +23,6 @@
 
     <%= yield %>
   </body>
-  <!-- <div class="wrapper-for-content-outside-of-footer">
-     Uncomment this whole section for a sticky footer. The content of the page should be inside of this .wrapper-for-content-outside-of-footer
-  </div> -->
 
-
-
+  <div class="footer">Footer content goes here.</div>
 </html>
