--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,414 +1,568 @@
 
-//nav bar
+
+/*
+	* Design by : Mahmoud Abd Alkarim ^_^
+	* Twitter   : AbdAlkarimTweet
+	* Contact   : AbdAlkarim.mail@gmail.com
+*/
 * {
-  margin: 0;
-  padding: 0;
+  margin:0;
+  padding:0
 }
-
-nav {
-  margin-top:3em;
-  padding-bottom: 3em;
-}
-
-ul {
-  overflow: auto;
-  list-style-type: none;
-}
-
-li {
-  height: 25px;
-  float: left;
-  margin-right: 0px;
-  border-right: 1px solid #aaa;
-  padding: 0 15px;
-}
-
-li:last-child {
-  border-right: none;
-}
-
-li a {
-  text-decoration: none;
-  color: #ccc;
-  font: 19px/1 Helvetica, Verdana, sans-serif;
-  text-transform: uppercase;
-
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  -ms-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-
-li a:hover {
-  color: #94a764;
-}
-
-li.active a {
-  font-weight: bold;
-  color: #333;
-}
-
-//about us page
-@import url(https://fonts.googleapis.com/css?family=Droid+Sans);
-* {
-  box-sizing: border-box;
-}
-
-
-.card {
-  width: 600px;
-  margin: 50px;
-  background-color: #ffffff;
-  color: #444;
-  overflow: hidden;
-  display: inline-block;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-}
-
-
-.card h1 {
-  margin: 0;
-  padding: 20px;
-  text-align: center;
-  font-family: 'Droid Sans', sans-serif;
-  font-weight: 400;
-  color:#FFF;
-  background-image: url("http://www.oia.com.ar/uploads/novedades/original/252_0.jpg");
-  animation: fadein 1.2s;
-}
-.card img {
-  float: left;
-  width: 150px;
-  height: 150px;
-  margin: 20px;
-  position: relative;
-  z-index: 1;
-  animation: grow 0.6s;
-  border-radius: 50%;
-}
-.card .bio {
-  position: relative;
-  margin: 20px;
-  height: 250px;
-  font-family: 'Droid Sans', sans-serif;
-  animation: slidein 1.2s;
-}
-
-@keyframes fadein {
-  from {
-    color: transparent;
-  }
-  to {
-    color: #FFF;
-  }
-}
-@keyframes grow {
-  from {
-    transform: scale(0);
-  }
-  80% {
-    transform: scale(1.1);
-  }
-  to {
-    transform: scale(1);
-  }
-}
-@keyframes slidein {
-  from {
-    opacity: 0;
-  }
-  49.9% {
-    opacity: 0;
-  }
-  50% {
-    left: -240px;
-  }
-  to {
-    left: 0;
-  }
-}
-
-//main page
-
-
-/*PEN STYLES*/
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:400,700);
-$green: #75D13B;
-$grey: #e9e9e9;
-
-@mixin transition($dur, $prop: all) {
-	transition: $prop $dur ease;
-	-webkit-transition: $prop $dur ease;
-}
-
-@mixin bgImg($url) {
-	background: url($url) center no-repeat;
-	background-size: cover;
-}
-
-.blog-card {
-	@include transition(0.3s, height);
-	background: #fff;
-	border-radius: 3px;
-	box-shadow: 0 3px 7px -3px rgba(0, 0, 0, 0.3);
-	margin: 0 auto 1.6%;
-	overflow: hidden;
-	position: relative;
-	font-size: 14px;
-	line-height: 1.45em;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-
-	&.alt {
-		.details {
-			right: -100%;
-			left: inherit;
-		}
-	}
-
-	.photo {
-		height: 200px;
-		position: relative;
-
-		&.photo1 {
-			@include bgImg("http://www.oia.com.ar/uploads/novedades/original/252_0.jpg");
-		}
-
-		&.photo2 {
-			@include bgImg("http://i60.tinypic.com/xeiv79.jpg");
-		}
-	}
-
-	.details {
-		@include transition(0.3s);
-
-		background: rgba(0, 0, 0, 0.6);
-		box-sizing: border-box;
-		color: #fff;
-		font-family: "Open Sans";
-		list-style: none;
-		margin: 0;
-		padding: 10px 15px;
-		height: 200px;
-
-		/*POSITION*/
-		position: absolute;
-		top: 0;
-		left: -100%;
-
-		> li {
-			padding: 3px 0;
-		}
-
-		li:before, .tags ul:before {
-			font-family: FontAwesome;
-			margin-right: 10px;
-			vertical-align: middle;
-		}
-
-		.author:before {
-			content: "\f007";
-		}
-
-		.date:before {
-			content: "\f133";
-		}
-
-		.tags {
-			ul {
-				&:before {
-					content: "\f02b";
-				}
-
-				list-style: none;
-				margin: 0;
-				padding: 0;
-			}
-
-			li {
-				display: inline-block;
-				margin-right: 3px;
-			}
-		}
-
-		a {
-			color: inherit;
-			border-bottom: 1px dotted;
-
-			&:hover {
-				color: $green;
-			}
-		}
-	}
-
-	.description {
-		padding: 10px;
-		box-sizing: border-box;
-		position: relative;
-    height: 200px;
-
-		h1 {
-			font-family: "Roboto";
-			line-height: 1em;
-			margin: 0 0 10px 0;
-		}
-
-		h2 {
-			color: $grey / 1.5;
-			font-family: "Open Sans";
-			line-height: 1.2em;
-			text-transform: uppercase;
-			font-size: 1em;
-			font-weight: 400;
-			margin: 1.2% 0;
-		}
-
-		p {
-			position: relative;
-			margin: 0;
-			padding-top: 20px;
-
-			&:after {
-				content: "";
-				background: $green;
-				height: 6px;
-				width: 40px;
-
-				/*POSITION*/
-				position: absolute;
-				top: 6px;
-				left: 0;
-			}
-		}
-
-		a {
-			color: $green;
-			margin-bottom: 10px;
-			float: right;
-
-			&:after {
-				@include transition(0.3s);
-
-				content: "\f061";
-				font-family: FontAwesome;
-				margin-left: -10px;
-				opacity: 0;
-				vertical-align: middle;
-			}
-
-
-		}
-	}
-}
-
-@media screen and (min-width: 600px) {
-	.blog-card {
-		height: 200px;
-		max-width: 100%;
-    margin-left: 3em;
-    margin-right: 3em;
-
-		&.alt {
-			.details {
-				padding-left: 30px;
-			}
-
-			.description {
-				float: right;
-
-				&:before {
-					transform: skewX(5deg);
-					right: -15px;
-					left: inherit;
-				}
-			}
-
-			.photo {
-				float: right;
-			}
-		}
-
-		.photo {
-			@include transition(0.5s);
-
-			float: left;
-			height: 100%;
-			width: 40%;
-		}
-
-		.details {
-			width: 40%;
-		}
-
-		.description {
-			float: left;
-			width: 60%;
-			z-index: 0;
-
-			&:before {
-				transform: skewX(-5deg);
-				content: "";
-				background: #fff;
-				width: 100%;
-				z-index: -1;
-
-				/*POSITION*/
-				position: absolute;
-				left: -15px;
-				top: 0;
-				bottom: 0;
-			}
-		}
-	}
-}
-
-//footer
-
-/**
- * Demo Styles
- */
-
-html {
-  height: 100%;
-  box-sizing: border-box;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
 body {
-  position: relative;
-  margin: 0;
-  padding-bottom: 6rem;
-  min-height: 100%;
-  font-family: "Helvetica Neue", Arial, sans-serif;
+  color:#FFF;
+  background:#222;
+  margin:0;
+  padding:0;
+  font-family:
+  tahoma;
+  min-height:
+  2000px
+}
+span.logo {
+  position:fixed;
+  z-index:99999;
+  margin:25px 0 0 35px;
+  font-size:19px;
+  font-weight:bold;
+  color:#E8F873
+}
+span.logo span {
+  color:#300
+}
+ul {
+  text-align:center;
+  list-style:none;
+  padding:0;
+  margin:0;
+  height:73px;
+  position:fixed;
+  width:100%;
+  background:rgba(207,65,65,0.25);
+  top:0;left:0;z-index:1
+}
+ul li {
+  display:inline-block;
+  cursor:pointer
+}
+ul li a {
+  text-decoration:none;
+  color:#123;
+  display:block;
+  padding:27px 35px;
+  -webkit-transition:all 0.5s ease;
+  -moz-transition:all 0.5s ease;
+  -o-transition:all 0.5s ease;
+  transition:all 0.5s ease;
+  font-size:14px;
+  font-weight:bold
+}
+ul li a:hover{
+  color:#FFF;
+  text-shadow:0px 1px 1px #fff
+}
+p {
+  font-size: 12px;
+}
+#all-div{
+  width:100%;
+  height:100%;
+  position:absolute;
+  text-align:center;
+  font-size:25px;
+  font-weight:bold;
+  font-family:verdana
+}
+.home{
+  color:#FFF;
+  text-shadow:
+  0px 1px 2px #fff;
+  font-size:16px
+}
+#link1 {
+  background:#008080;
+  height:100%;
+  padding-top:100px
+}
+#link2{
+  background:#60F;
+  height:100%;
+  padding-top:100px
+}
+#link3{
+  background:#990;
+  height:100%;
+  padding-top:100px
+}
+#link4{
+  background:#E100C8;
+  height:100%;
+  padding-top:100px
+}
+#link5{
+  background:#936;
+  height:100%;
+  padding-top:100px
+}
+#link6{
+  background:#234;
+  height:100%;
+  padding-top:100px
+}
+#link7{
+  background:#847;
+  height:100%;
+  padding-top:100px
+}
+#link8{
+  background:#345;
+  height:100%;
+  padding-top:100px
+}
+.top{
+  width:50px;
+  height:50px;
+  border-radius:100%;
+  background:#1A5F5F;
+  position:fixed;
+  top:620px;
+  left:23px;
+  text-shadow:1px 1px 4px #222;
+  cursor:pointer;outline:0;
+  color:#FFF;font-weight:bold;
+  font-size:15px;
+  display:none;
+  z-index:99999;
+  text-align:center;
+  line-height:50px;
+  text-decoration:none;
+  border:3px solid #EEE;
+  -webkit-transition:all 0.3s ease;
+  -moz-transition:all 0.3s ease;
+  -o-transition:all 0.3s ease;
+  transition:all 0.3s ease
+}
+.top:active{
+  border:3px solid #1A5F5F;
+  background:#EEE;
+  color:#001717
+}
+.top span{
+  color:#FF5F49
 }
 
-.demo {
-  margin: 0 auto;
-  padding-top: 64px;
-  max-width: 640px;
-  width: 94%;
-}
 
-.demo h1 {
-  margin-top: 0;
-}
 
-/**
- * Footer Styles
- */
-
-.footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 1rem;
-  background-color: #efefef;
-  text-align: center;
-}
+// //nav bar
+// * {
+//   margin: 0;
+//   padding: 0;
+// }
+//
+// nav {
+//   margin-top:3em;
+//   padding-bottom: 3em;
+// }
+//
+// ul {
+//   overflow: auto;
+//   list-style-type: none;
+// }
+//
+// li {
+//   height: 25px;
+//   float: left;
+//   margin-right: 0px;
+//   border-right: 1px solid #aaa;
+//   padding: 0 15px;
+// }
+//
+// li:last-child {
+//   border-right: none;
+// }
+//
+// li a {
+//   text-decoration: none;
+//   color: #ccc;
+//   font: 19px/1 Helvetica, Verdana, sans-serif;
+//   text-transform: uppercase;
+//
+//   -webkit-transition: all 0.5s ease;
+//   -moz-transition: all 0.5s ease;
+//   -o-transition: all 0.5s ease;
+//   -ms-transition: all 0.5s ease;
+//   transition: all 0.5s ease;
+// }
+//
+// li a:hover {
+//   color: #94a764;
+// }
+//
+// li.active a {
+//   font-weight: bold;
+//   color: #333;
+// }
+//
+// //about us page
+// @import url(https://fonts.googleapis.com/css?family=Droid+Sans);
+// * {
+//   box-sizing: border-box;
+// }
+//
+//
+// .card {
+//   width: 600px;
+//   margin: 50px;
+//   background-color: #ffffff;
+//   color: #444;
+//   overflow: hidden;
+//   display: inline-block;
+//   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+// }
+//
+//
+// .card h1 {
+//   margin: 0;
+//   padding: 20px;
+//   text-align: center;
+//   font-family: 'Droid Sans', sans-serif;
+//   font-weight: 400;
+//   color:#FFF;
+//   background-image: url("http://www.oia.com.ar/uploads/novedades/original/252_0.jpg");
+//   animation: fadein 1.2s;
+// }
+// .card img {
+//   float: left;
+//   width: 150px;
+//   height: 150px;
+//   margin: 20px;
+//   position: relative;
+//   z-index: 1;
+//   animation: grow 0.6s;
+//   border-radius: 50%;
+// }
+// .card .bio {
+//   position: relative;
+//   margin: 20px;
+//   height: 250px;
+//   font-family: 'Droid Sans', sans-serif;
+//   animation: slidein 1.2s;
+// }
+//
+// @keyframes fadein {
+//   from {
+//     color: transparent;
+//   }
+//   to {
+//     color: #FFF;
+//   }
+// }
+// @keyframes grow {
+//   from {
+//     transform: scale(0);
+//   }
+//   80% {
+//     transform: scale(1.1);
+//   }
+//   to {
+//     transform: scale(1);
+//   }
+// }
+// @keyframes slidein {
+//   from {
+//     opacity: 0;
+//   }
+//   49.9% {
+//     opacity: 0;
+//   }
+//   50% {
+//     left: -240px;
+//   }
+//   to {
+//     left: 0;
+//   }
+// }
+//
+// //main page
+//
+//
+// /*PEN STYLES*/
+// @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700|Roboto:400,700);
+// $green: #75D13B;
+// $grey: #e9e9e9;
+//
+// @mixin transition($dur, $prop: all) {
+// 	transition: $prop $dur ease;
+// 	-webkit-transition: $prop $dur ease;
+// }
+//
+// @mixin bgImg($url) {
+// 	background: url($url) center no-repeat;
+// 	background-size: cover;
+// }
+//
+// .blog-card {
+// 	@include transition(0.3s, height);
+// 	background: #fff;
+// 	border-radius: 3px;
+// 	box-shadow: 0 3px 7px -3px rgba(0, 0, 0, 0.3);
+// 	margin: 0 auto 1.6%;
+// 	overflow: hidden;
+// 	position: relative;
+// 	font-size: 14px;
+// 	line-height: 1.45em;
+// 	-webkit-font-smoothing: antialiased;
+// 	-moz-osx-font-smoothing: grayscale;
+//
+// 	&.alt {
+// 		.details {
+// 			right: -100%;
+// 			left: inherit;
+// 		}
+// 	}
+//
+// 	.photo {
+// 		height: 200px;
+// 		position: relative;
+//
+// 		&.photo1 {
+// 			@include bgImg("http://www.oia.com.ar/uploads/novedades/original/252_0.jpg");
+// 		}
+//
+// 		&.photo2 {
+// 			@include bgImg("http://i60.tinypic.com/xeiv79.jpg");
+// 		}
+// 	}
+//
+// 	.details {
+// 		@include transition(0.3s);
+//
+// 		background: rgba(0, 0, 0, 0.6);
+// 		box-sizing: border-box;
+// 		color: #fff;
+// 		font-family: "Open Sans";
+// 		list-style: none;
+// 		margin: 0;
+// 		padding: 10px 15px;
+// 		height: 200px;
+//
+// 		/*POSITION*/
+// 		position: absolute;
+// 		top: 0;
+// 		left: -100%;
+//
+// 		> li {
+// 			padding: 3px 0;
+// 		}
+//
+// 		li:before, .tags ul:before {
+// 			font-family: FontAwesome;
+// 			margin-right: 10px;
+// 			vertical-align: middle;
+// 		}
+//
+// 		.author:before {
+// 			content: "\f007";
+// 		}
+//
+// 		.date:before {
+// 			content: "\f133";
+// 		}
+//
+// 		.tags {
+// 			ul {
+// 				&:before {
+// 					content: "\f02b";
+// 				}
+//
+// 				list-style: none;
+// 				margin: 0;
+// 				padding: 0;
+// 			}
+//
+// 			li {
+// 				display: inline-block;
+// 				margin-right: 3px;
+// 			}
+// 		}
+//
+// 		a {
+// 			color: inherit;
+// 			border-bottom: 1px dotted;
+//
+// 			&:hover {
+// 				color: $green;
+// 			}
+// 		}
+// 	}
+//
+// 	.description {
+// 		padding: 10px;
+// 		box-sizing: border-box;
+// 		position: relative;
+//     height: 200px;
+//
+// 		h1 {
+// 			font-family: "Roboto";
+// 			line-height: 1em;
+// 			margin: 0 0 10px 0;
+// 		}
+//
+// 		h2 {
+// 			color: $grey / 1.5;
+// 			font-family: "Open Sans";
+// 			line-height: 1.2em;
+// 			text-transform: uppercase;
+// 			font-size: 1em;
+// 			font-weight: 400;
+// 			margin: 1.2% 0;
+// 		}
+//
+// 		p {
+// 			position: relative;
+// 			margin: 0;
+// 			padding-top: 20px;
+//
+// 			&:after {
+// 				content: "";
+// 				background: $green;
+// 				height: 6px;
+// 				width: 40px;
+//
+// 				/*POSITION*/
+// 				position: absolute;
+// 				top: 6px;
+// 				left: 0;
+// 			}
+// 		}
+//
+// 		a {
+// 			color: $green;
+// 			margin-bottom: 10px;
+// 			float: right;
+//
+// 			&:after {
+// 				@include transition(0.3s);
+//
+// 				content: "\f061";
+// 				font-family: FontAwesome;
+// 				margin-left: -10px;
+// 				opacity: 0;
+// 				vertical-align: middle;
+// 			}
+//
+//
+// 		}
+// 	}
+// }
+//
+// @media screen and (min-width: 600px) {
+// 	.blog-card {
+// 		height: 200px;
+// 		max-width: 100%;
+//     margin-left: 3em;
+//     margin-right: 3em;
+//
+// 		&.alt {
+// 			.details {
+// 				padding-left: 30px;
+// 			}
+//
+// 			.description {
+// 				float: right;
+//
+// 				&:before {
+// 					transform: skewX(5deg);
+// 					right: -15px;
+// 					left: inherit;
+// 				}
+// 			}
+//
+// 			.photo {
+// 				float: right;
+// 			}
+// 		}
+//
+// 		.photo {
+// 			@include transition(0.5s);
+//
+// 			float: left;
+// 			height: 100%;
+// 			width: 40%;
+// 		}
+//
+// 		.details {
+// 			width: 40%;
+// 		}
+//
+// 		.description {
+// 			float: left;
+// 			width: 60%;
+// 			z-index: 0;
+//
+// 			&:before {
+// 				transform: skewX(-5deg);
+// 				content: "";
+// 				background: #fff;
+// 				width: 100%;
+// 				z-index: -1;
+//
+// 				/*POSITION*/
+// 				position: absolute;
+// 				left: -15px;
+// 				top: 0;
+// 				bottom: 0;
+// 			}
+// 		}
+// 	}
+// }
+//
+// //footer
+//
+// /**
+//  * Demo Styles
+//  */
+//
+// html {
+//   height: 100%;
+//   box-sizing: border-box;
+// }
+//
+// *,
+// *:before,
+// *:after {
+//   box-sizing: inherit;
+// }
+//
+// body {
+//   position: relative;
+//   margin: 0;
+//   padding-bottom: 6rem;
+//   min-height: 100%;
+//   font-family: "Helvetica Neue", Arial, sans-serif;
+// }
+//
+// .demo {
+//   margin: 0 auto;
+//   padding-top: 64px;
+//   max-width: 640px;
+//   width: 94%;
+// }
+//
+// .demo h1 {
+//   margin-top: 0;
+// }
+//
+// /**
+//  * Footer Styles
+//  */
+//
+// .footer {
+//   position: absolute;
+//   right: 0;
+//   bottom: 0;
+//   left: 0;
+//   padding: 1rem;
+//   background-color: #efefef;
+//   text-align: center;
+// }
