--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,6 +22,39 @@
     <p>
       Essential Nutrition provides nutrition counseling and wellness coaching in the Durham and Chapel Hill, NC area.
     </p>
+    <div class="col1">
+      <p>
+        Do you need help following a special diet for diabetes, high blood pressure,
+        lowering your cholesterol, or weight loss? Do you have irritable bowel syndrome
+        or other gastrointestinal problems? Do you need more energy that balanced healthy
+        eating can bring? Are you trying to maximize your athletic performance through
+        nutrition? Are you dealing with an eating disorder and need guidance and support
+        for a healthier path? Or, do you want to improve several areas of your lifestyle and
+        want guidance and coaching to meet your vision and goals?
+        There are many different reasons you might seek their counseling and services.
+      </p>
+      <p>
+        Essential Nutrition provides nutrition counseling and
+        wellness coaching in the Durham and Chapel Hill, NC area.
+        A staff of two specialists offer services at this site.
+        Each is a licensed Dietician/Nutritionist but also have particular expertise.
+        The owner, Kay Pratt, is also a Wellness Coach. Dr. Susan Lutz specializes in pediatric and adolescent nutrition.
+      </p>
+      <p>
+        Read more about our counseling services.
+        Essential Nutrition  uses scientific evidence to help you establish habits for choosing,
+        preparing and eating delicious and wholesome foods. Making small, sustainable lifestyle
+        changes can improve your health. We will guide and coach you to achieve your goals to better health.
+        We are participating providers for BCBS, Duke and other insurance companies.
+        Call or email to inquire about eligibility.
+      </p>
+    </div>
+    <div class="col2">
+      <p>
+        col2
+      </p>
+    </div>
+
 
 
   </div>
