--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -22,8 +22,12 @@
     <p>
       Essential Nutrition provides nutrition counseling and wellness coaching in the Durham and Chapel Hill, NC area.
     </p>
-    <div class="col1">
-      <p>
+
+
+    <div class="columnsContainer">
+
+	  	<div class="leftColumn">
+        <p>
         Do you need help following a special diet for diabetes, high blood pressure,
         lowering your cholesterol, or weight loss? Do you have irritable bowel syndrome
         or other gastrointestinal problems? Do you need more energy that balanced healthy
@@ -34,13 +38,6 @@
         There are many different reasons you might seek their counseling and services.
       </p>
       <p>
-        Essential Nutrition provides nutrition counseling and
-        wellness coaching in the Durham and Chapel Hill, NC area.
-        A staff of two specialists offer services at this site.
-        Each is a licensed Dietician/Nutritionist but also have particular expertise.
-        The owner, Kay Pratt, is also a Wellness Coach. Dr. Susan Lutz specializes in pediatric and adolescent nutrition.
-      </p>
-      <p>
         Read more about our counseling services.
         Essential Nutrition  uses scientific evidence to help you establish habits for choosing,
         preparing and eating delicious and wholesome foods. Making small, sustainable lifestyle
@@ -48,12 +45,32 @@
         We are participating providers for BCBS, Duke and other insurance companies.
         Call or email to inquire about eligibility.
       </p>
-    </div>
-    <div class="col2">
-      <p>
-        col2
-      </p>
-    </div>
+	  	</div>
+
+	  	<div class="rightColumn">
+        <table class="contactinfo">
+          <tr>
+            <td>Phone:</td>
+            <td class="info">919-923-6874</td>
+          </tr>
+          <tr>
+            <td>Fax:</td>
+            <td class="info">919-237-9214</td>
+          </tr>
+          <tr>
+            <td>Email:</td>
+            <td class="info">essential@nc.rr.com</td>
+          </tr>
+        </table>
+        <p>
+          Essential Nutrition provides nutrition counseling and
+          wellness coaching in the Durham and Chapel Hill, NC area.
+          A staff of two specialists offer services at this site.
+          Each is a licensed Dietician/Nutritionist but also have particular expertise.
+          The owner, Kay Pratt, is also a Wellness Coach. Dr. Susan Lutz specializes in pediatric and adolescent nutrition.
+        </p>
+	  	</div>
+  	</div>
 
 
 
