--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,253 +1,165 @@
+/* Base Styles */
 
-@import "bourbon";
-@import "neat";
-/*
-	* Design by : Mahmoud Abd Alkarim ^_^
-	* Twitter   : AbdAlkarimTweet
-	* Contact   : AbdAlkarim.mail@gmail.com
-*/
-* {
-  margin:0;
-  padding:0
-}
 body {
-  background:#222;
-  margin:0;
-  padding:0;
-  font-family:
-  tahoma;
-  min-height:
-  2000px
-}
-span.logo {
-  position:fixed;
-  z-index:99999;
-  margin:10px 0 0 35px;
-  font-size:19px;
-  font-weight:bold;
-  color:#E8F873
-}
-span.logo span {
-  color:#300
-}
-ul {
-  text-align:center;
-  list-style:none;
-  padding:0;
-  margin:0;
-  height:73px;
-  position:fixed;
-  width:100%;
-  background:rgba(0,0,0,0.25);
-  top:0;left:0;z-index:1
-}
-ul li {
-  display:inline-block;
-  cursor:pointer
-}
-ul li a {
-  text-decoration:none;
-  color:#123;
-  display:block;
-  padding:27px 30px;
-  -webkit-transition:all 0.5s ease;
-  -moz-transition:all 0.5s ease;
-  -o-transition:all 0.5s ease;
-  transition:all 0.5s ease;
-  font-size:14px;
-  font-weight:bold
-}
-ul li a:hover{
-  color:#FFF;
-  text-shadow:0px 1px 1px #fff
-}
-p {
-  font-weight:normal;
-  font-size: 12px;
-}
-#all-div{
-  width:100%;
-  height:100%;
-  position:absolute;
-  text-align:center;
-  font-size:25px;
-  font-weight:bold;
-  font-family:verdana
-}
-.home{
-  color:#FFF;
-  text-shadow:
-  0px 1px 2px #fff;
-  font-size:16px
+  padding: 0;
+  margin: 0;
+  line-height: 1.4;
+  font-size: 16px;
+  color: #fff;
+  background: #472d33;
+  font-family: 'Muli', sans-serif;
+  -webkit-transition: all .5s;
+  transition: all .5s;
 }
 
-table {
-  font-weight: normal;
-  font-size: 15px;
+a {
+  text-decoration: none;
+  color: inherit;
 }
-.contactinfo {
-  padding-bottom: 3em;
+/* Themes */
+
+.perl {
+  color: #222;
+  background: #f0f8ff;
+  header, .button:hover {
+    background: #ededed;
+  }
+  .button {
+    background: #fff;
+  }
 }
 
-#link1 {
-  color:#1b250e;
-  background:#f3f8ed;
-  height:100%;
-  padding-top:100px
+.royal {
+  background: #4169E1;
+  header, .button:hover {
+    background: #3454b4;
+  }
+  .button {
+    background: #6687e7;
+  }
 }
 
-.col1 {
-  @include span-columns(6);
-  // p {
-  //   font-size: 15px;
-  //   text-align: justify;
-  //   margin-top: 3em;
-  //   margin-left:9em;
-  //   margin-right: 5em;
-  // }
-}
-.col2 {
-@include span-columns(6);
-@include omega();
-  // p {
-  //   font-size: 15px;
-  //   text-align: justify;
-  //   margin-top: 3em;
-  //   margin-left:5em;
-  //   margin-right: 9em;
-  // }
-}
-#link2{
-  color:#1b250e;
-  background:#e7f1da;
-  height:100%;
-  padding-top:100px
-}
-#link3{
-  color:#1b250e;
-  background:#dbeac8;
-  height:100%;
-  padding-top:100px
-}
-#link4{
-  color:#1b250e;
-  background:#cfe3b5;
-  height:100%;
-  padding-top:100px
-}
-#link5{
-  color:#1b250e;
-  background:#c3dca3;
-  height:100%;
-  padding-top:100px
-}
-#link6{
-  color:#1b250e;
-  background:#b7d590;
-  height:100%;
-  padding-top:100px
-}
-#link7{
-  color:#1b250e;
-  background:#abce7e;
-  height:100%;
-  padding-top:100px
-}
-#link8{
-  color: #1b250e;
-  background:#9fc76b;
-  height:100%;
-  padding-top:100px
-}
-.top{
-  width:50px;
-  height:50px;
-  border-radius:100%;
-  background:#1A5F5F;
-  position:fixed;
-  top:620px;
-  left:23px;
-  text-shadow:1px 1px 4px #222;
-  cursor:pointer;outline:0;
-  color:#FFF;font-weight:bold;
-  font-size:15px;
-  display:none;
-  z-index:99999;
-  text-align:center;
-  line-height:50px;
-  text-decoration:none;
-  border:3px solid #EEE;
-  -webkit-transition:all 0.3s ease;
-  -moz-transition:all 0.3s ease;
-  -o-transition:all 0.3s ease;
-  transition:all 0.3s ease
-}
-.top:active{
-  border:3px solid #1A5F5F;
-  background:#EEE;
-  color:#001717
-}
-.top span{
-  color:#FF5F49
-}
-//columns
-
-*, *:before, *:after {
-  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+.lime {
+  background: #32CD32;
+  header, .button:hover {
+    background: #28a428;
+  }
+  .button {
+    background: #5ad75a;
+  }
 }
 
-body { margin: 0; }
+/* Header Styles */
 
-.columnsContainer, footer, header { position: relative; margin: .5em; }
-
-.leftColumn, .rightColumn, footer, header {
-   padding: 1.25em;
-   text-align: justify;
-   p {
-     font-size: 16px;
-   }
- }
-
-.leftColumn { margin-bottom: .5em; }
-
-.nav {
-  list-style: none;
-  margin-left: 0;
-  margin-bottom: 0;
-  padding-left: 0;
+header {
+  max-width: 100%;
+  height: 80px;
+  padding: 5px;
+  background: #382428;
 }
 
-.nav > li,
-.nav > li > a {
-  display: inline-block;
-  *display: inline;
-  zoom: 1;
+.logo {
+  float: left;
+  font-family: 'Monda', sans-serif;
+  font-size: 1.75em;
+  margin-left: 4%;
+  font-weight: 400;
 }
 
-.inline-items {
-  margin-top: 0;
+nav {
+  margin-right: 2%;
 }
 
-.inline-items li {
-  margin-left: 0;
-  padding-left: 10px;
-  padding-right: 10px;
+.nav-bar {
+  padding: 0;
+  margin: 0;
+  float: right;
+  -webkit-transition: max-height 0.5s;
+  transition: max-height 0.5s;
+  li {
+    display: inline-block;
+    padding: 30px 10px;
+  }
+  a {
+    padding: 5px;
+    text-transform: uppercase;
+    font-size: .8em;
+    letter-spacing: 1px;
+  }
 }
 
-.inline-items li:first-child {
-  margin-left: 0;
+/* Section Styles */
+
+.container {
+  max-width: 85%;
+  margin: 4em auto 0 auto;
+  padding: .625em .625em 2em .625em;
+  text-align: center;
+}
+
+.main-heading {
+  font-family: 'Monda', sans-serif;
+  font-size: 3em;
+  font-weight: 400;
+}
+/* Button Styles */
+
+.button {
+  padding: 20px 25px;
+  margin: 2em .3em;
+  background: #ba4662;
+  font-size: .9em;
+  letter-spacing: 1px;
   border: none;
-  padding-left: 0;
-  padding-right: 10px;
+  border-radius: 3px;
+  cursor: pointer;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
 }
 
-.inline-items li:last-child {
-  padding-right: 0;
+.button:hover {
+  background: #ae3c58;
+}
+/* Media Queries */
+
+@media only screen and (max-width: 800px) {
+  .button {
+    margin: .9em .3em;
+    font-size: .8em;
+  }
+  .page-content {
+    margin-bottom: 1.75em;
+  }
 }
 
-/* MEDIA QUERIES */
-@media screen and (min-width: 47.5em ) {
-  .leftColumn { margin-right: 19.5em; }
+@media only screen and (max-width: 630px) {
+  .nav-bar li {
+    padding: 30px 5px;
+  }
+  .nav-bar a {
+    padding: 0;
+  }
+  .container {
+    margin-top: 1.25em;
+  }
+}
 
-	.rightColumn { position: absolute; top: 0; right: 0; width: 18.75em; }
+@media only screen and (max-width: 480px) {
+  .main-heading {
+    font-size: 2.25em;
+  }
+  .page-content {
+    font-size: .9em;
+  }
+  .logo {
+    margin-left: 1%;
+    font-size: 1.35em;
+    padding: .55em inherit;
+  }
+  nav {
+    margin-right: 1%;
+  }
+  .nav-bar a {
+    font-size: .7em;
+  }
 }
