about us and recommendation pages look nice

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,11 @@
         <ul class="nav-bar">
           <li><a href="aboutus">About</a></li>
           <li><a href="services">Services</a></li>
-          <li><a href="#">Blog</a></li>
+          <li><a href="recommendations">Recommendations</a></li>
+          <li><a href="contactus">Directione</a></li>
+          <li><a href="nutritiontips">Nutrtion Tips</a></li>
+          <li><a href="recipes">Recipes</a></li>
+          <li><a href="wellnesscoaching">Wellness Coaching</a></li>
         </ul>
       </nav>
     </header>
