--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -163,3 +163,67 @@ nav {
     font-size: .7em;
   }
 }
+
+
+
+
+
+*, *:after, *:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+img {
+  max-width:100%;
+}
+
+
+
+.card-grid {
+  width:100%;
+}
+.card-grid:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
+
+.card-wrap {
+  float:left;
+  width:100%;
+  padding:5px;
+}
+@media (min-width: 500px) {
+  .card-wrap {
+    width:50%;
+  }
+}
+@media (min-width: 720px) {
+  .card-wrap {
+    width:25%;
+  }
+}
+
+
+.card {
+  background-color:white;
+  color: black;
+  border-radius:5px;
+  border:1px solid #472d33;
+  border-bottom:2px solid #ccc;
+  h4 {
+    text-align: center;
+  }
+  p {
+    text-align: justify;
+  }
+  .rec {
+    height: 300px;
+  }
+}
+.card > div {
+  padding:0 1em;
+}
