added tables for nutrition tips

--- a/app/views/welcome/nutritiontips.html.erb
+++ b/app/views/welcome/nutritiontips.html.erb
@@ -1,52 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <div class="nutritiontips">
+<head>
+  <meta charset="utf-8">
+  <title></title>
+</head>
+<body>
+  <div class="nutritiontips">
 
-    <table>
+    <table style="width:100%">
       <tr>
-        <th>Organic Vs. Conventional Fruits and Vegetables</th>
-        <th></th>
-      </tr>
-      <tr>
-        <td>Buying organic reduces pollution of the air, water and soil
+        <td>
+          Organic Vs. Conventional Fruits and Vegetables
+          Buying organic reduces pollution of the air, water and soil
           and also decreases the pollution on the food you eat. Peaches,
           apples and bell peppers top the list of the fruits/vegetables with
           the most pesticide residue. Read Kay's article about this.
         </td>
-        <td> <img src="http://essentialnutrition.biz/images/dreamstimefree_organic_for_web.jpg" alt="" /></td>
-      </tr>
-
-      <tr>
-        <th>Frugal and Healthy Eating</th>
-        <th></th>
+        <td><img src="http://essentialnutrition.biz/images/dreamstimefree_organic_for_web.jpg" alt="" /></td>
       </tr>
       <tr>
-        <td>Believe it or not, there are plenty of ways that you can eat healthy
+        <td><img src="http://essentialnutrition.biz/images/dreamstimefree_bean_for_web.jpg" alt="" /></td>
+        <td>
+          Frugal and Healthy Eating
+          Believe it or not, there are plenty of ways that you can eat healthy
           and be frugal at the same time. Even if you are in a rush, food can be
           prepared quickly and in a way that nourishes you. Read Kay's article about this.
         </td>
-        <td> <img src="http://essentialnutrition.biz/images/dreamstimefree_bean_for_web.jpg" alt="" /></td>
-      </tr>
-
-      <tr>
-        <th>Omega 3 Fatty Acids</th>
-        <th></th>
       </tr>
       <tr>
-        <td>Yes, omega 3 fatty acids are the healthy fats and fish is great source
+        <td>
+          Omega 3 Fatty Acids
+          Yes, omega 3 fatty acids are the healthy fats and fish is great source
           but they can also be found in plants. Did you know there are different
           forms of omega 3? There's DHA/EPA and ALA--which is found in certain seeds, grains,
-          and nuts. Read Kay's article about this.
+          and nuts.
         </td>
-        <td> <img src="http://essentialnutrition.biz/images/dreamstimefree_Sardines_for_web.jpg" alt="" /></td>
+        <td><img src="http://essentialnutrition.biz/images/dreamstimefree_Sardines_for_web.jpg" alt="" /></td>
       </tr>
-    </table>
   </div>
 
-  </body>
+</body>
 </html>
