making the nurtition tips page better

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -229,11 +229,8 @@ img {
 }
 
 .nutritiontips {
-  margin-left: 6em;
-  margin-right: 6em;
-  img {
-    height: 200px;
-    width:250px;
-
+  .paragraph {
+    width: 200px;
   }
+  display: block;
 }
