changed the color of some of the text

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -209,11 +209,10 @@ img {
 
 
 .card {
-  background-color: #f5f0f1;
-  color: black;
+  background-color: #382428;
+  color: #e0d2d5;
   border-radius:5px;
   border:1px solid #472d33;
-  border-bottom:2px solid #ccc;
   h4 {
     text-align: center;
   }
