applied color styles to the services tab

--- a/app/views/welcome/services.html.erb
+++ b/app/views/welcome/services.html.erb
@@ -7,6 +7,7 @@
   <body>
     <div class="features">
       <article>
+        <div class="paddingleft">
         <p>
           Essential Nutrition is a participating provider with the insurance
           companies listed below. We suggest you call your insurance company to
@@ -16,9 +17,11 @@
           <li>Duke Basic/Duke Select</li>
           <li>Coventry</li>
         </p>
+        </div>
       </article>
 
       <article>
+        <div class="paddingleft">
         <p>
           Below are some of the more common nutrition issues that we have helped.
           <li>Weight Management</li>
@@ -44,8 +47,10 @@
           <li>Enteral and Parenteral Nutrition</li>
             <ul>Support for patients on nutritional support</ul>
         </p>
+      </div>
       </article>
       <article>
+        <div class="paddingleft">
         <p>
           Essential Nutrition works with adults, children, teens and families.
           We believe that food and eating are important parts of our lives and should
@@ -58,6 +63,7 @@
           <li>Wellness Coaching</li>
           <li>Grocery Store Tours</li>
         </p>
+      </div>
       </article>
 
 
