--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -209,6 +209,7 @@ img {
 
 
 .card {
+
   background-color: #382428;
   color: #e0d2d5;
   border-radius:5px;
@@ -230,7 +231,8 @@ img {
 
 //nutritiontips
 
-
+article {
+}
 article img{
   float: left;
   max-width: 20%;
@@ -296,4 +298,14 @@ h2 { margin-top: 0; }
 
 .compare article {
   @include col(1, 2);
+}
+
+.paddingleft {
+  background-color: #382428;
+  color: #e0d2d5;
+  border-radius:5px;
+  padding-left: 1em;
+  padding-right: 1em;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
