--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -209,7 +209,7 @@ img {
 
 
 .card {
-
+  font-family: 'Roboto', sans-serif;
   background-color: #382428;
   color: #e0d2d5;
   border-radius:5px;
@@ -231,8 +231,6 @@ img {
 
 //nutritiontips
 
-article {
-}
 article img{
   float: left;
   max-width: 20%;
@@ -308,4 +306,5 @@ h2 { margin-top: 0; }
   padding-right: 1em;
   padding-top: 5px;
   padding-bottom: 5px;
+  p { font-family: 'Roboto', sans-serif; }
 }
