commit before color changes

--- a/app/views/welcome/nutritiontips.html.erb
+++ b/app/views/welcome/nutritiontips.html.erb
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  
+
 </head>
 <body>
-
-  <section>
-    <article class="group"><img src="http://essentialnutrition.biz/images/dreamstimefree_organic_for_web.jpg" alt="" />
+  <article>
+    <div class="paddingleft">
+      <img src="http://essentialnutrition.biz/images/dreamstimefree_organic_for_web.jpg" alt="" />
       <p>
         Organic Vs. Conventional Fruits and Vegetables
         Buying organic reduces pollution of the air, water and soil
@@ -16,38 +16,32 @@
         apples and bell peppers top the list of the fruits/vegetables with
         the most pesticide residue. Read Kay's article about this.
       </p>
-    </article>
-  </section
+    </div>
+  </article>
+  <article>
+    <div class="paddingleft">
+      <img src="http://essentialnutrition.biz/images/dreamstimefree_bean_for_web.jpg" alt="" />
 
-  <div class="nutritiontips">
+      <p>
+        Frugal and Healthy Eating
+        Believe it or not, there are plenty of ways that you can eat healthy
+        and be frugal at the same time. Even if you are in a rush, food can be
+        prepared quickly and in a way that nourishes you. Read Kay's article about this.
+      </p>
+    </div>
+  </article>
+  <article>
+    <div class="paddingleft">
+      <img src="http://essentialnutrition.biz/images/dreamstimefree_Sardines_for_web.jpg" alt="" />
 
-  <img src="http://essentialnutrition.biz/images/dreamstimefree_organic_for_web.jpg" alt="" />
-
-  <p>
-    Organic Vs. Conventional Fruits and Vegetables
-    Buying organic reduces pollution of the air, water and soil
-    and also decreases the pollution on the food you eat. Peaches,
-    apples and bell peppers top the list of the fruits/vegetables with
-    the most pesticide residue. Read Kay's article about this.
-  </p>
-
-  <img src="http://essentialnutrition.biz/images/dreamstimefree_bean_for_web.jpg" alt="" />
-
-  <p>
-    Frugal and Healthy Eating
-    Believe it or not, there are plenty of ways that you can eat healthy
-    and be frugal at the same time. Even if you are in a rush, food can be
-    prepared quickly and in a way that nourishes you. Read Kay's article about this.
-  </p>
-  <img src="http://essentialnutrition.biz/images/dreamstimefree_Sardines_for_web.jpg" alt="" />
-
-  <p>
-    Omega 3 Fatty Acids
-    Yes, omega 3 fatty acids are the healthy fats and fish is great source
-    but they can also be found in plants. Did you know there are different
-    forms of omega 3? There's DHA/EPA and ALA--which is found in certain seeds, grains,
-    and nuts.
-  </p>
-  </div>
+      <p>
+        Omega 3 Fatty Acids
+        Yes, omega 3 fatty acids are the healthy fats and fish is great source
+        but they can also be found in plants. Did you know there are different
+        forms of omega 3? There's DHA/EPA and ALA--which is found in certain seeds, grains,
+        and nuts.
+      </p>
+    </div>
+  </article>
 </body>
 </html>
