--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,7 +6,7 @@ body {
   line-height: 1.4;
   font-size: 16px;
   color: #fff;
-  background: #472d33;
+  background: #e2e7ee;
   font-family: 'Muli', sans-serif;
   -webkit-transition: all .5s;
   transition: all .5s;
@@ -210,10 +210,10 @@ img {
 
 .card {
   font-family: 'Roboto', sans-serif;
-  background-color: #382428;
-  color: #e0d2d5;
+  background-color: #d2d9a6;
+  color: black;
   border-radius:5px;
-  border:1px solid #472d33;
+  border:1px solid #d2d9a6;
   h4 {
     text-align: center;
   }
@@ -299,12 +299,12 @@ h2 { margin-top: 0; }
 }
 
 .paddingleft {
-  background-color: #382428;
-  color: #e0d2d5;
+  background-color: #d2d9a6;
+  color: black;
   border-radius:5px;
   padding-left: 1em;
   padding-right: 1em;
   padding-top: 5px;
   padding-bottom: 5px;
-  p { font-family: 'Roboto', sans-serif; }
+  p { font-family: 'Roboto', sans-serif;}
 }
