--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -192,7 +192,9 @@ img {
 
 
 .card-wrap {
+  text-align: center;
   float:left;
+  display: block;
   width:100%;
   padding:5px;
 }
@@ -207,13 +209,13 @@ img {
   }
 }
 
-
 .card {
   font-family: 'Roboto', sans-serif;
   background-color: #d2d9a6;
   color: black;
   border-radius:5px;
   border:1px solid #d2d9a6;
+  text-align: center;
   h4 {
     text-align: center;
   }
@@ -307,4 +309,7 @@ h2 { margin-top: 0; }
   padding-top: 5px;
   padding-bottom: 5px;
   p { font-family: 'Roboto', sans-serif;}
+  img {
+    text-align: center;
+  }
 }
