--- a/app/views/welcome/nutritiontips.html.erb
+++ b/app/views/welcome/nutritiontips.html.erb
@@ -8,8 +8,9 @@
 <body>
   <article>
     <div class="paddingleft">
-      <img src="http://essentialnutrition.biz/images/dreamstimefree_organic_for_web.jpg" alt="" />
       <p>
+        <img src="http://essentialnutrition.biz/images/dreamstimefree_organic_for_web.jpg" alt="" style="vertical-align:middle"/>
+
         Organic Vs. Conventional Fruits and Vegetables
         Buying organic reduces pollution of the air, water and soil
         and also decreases the pollution on the food you eat. Peaches,
@@ -20,9 +21,10 @@
   </article>
   <article>
     <div class="paddingleft">
-      <img src="http://essentialnutrition.biz/images/dreamstimefree_bean_for_web.jpg" alt="" />
 
       <p>
+        <img src="http://essentialnutrition.biz/images/dreamstimefree_bean_for_web.jpg" alt="" style="vertical-align:middle" />
+
         Frugal and Healthy Eating
         Believe it or not, there are plenty of ways that you can eat healthy
         and be frugal at the same time. Even if you are in a rush, food can be
@@ -32,9 +34,10 @@
   </article>
   <article>
     <div class="paddingleft">
-      <img src="http://essentialnutrition.biz/images/dreamstimefree_Sardines_for_web.jpg" alt="" />
 
       <p>
+        <img src="http://essentialnutrition.biz/images/dreamstimefree_Sardines_for_web.jpg" alt="" style="vertical-align:middle" />
+        
         Omega 3 Fatty Acids
         Yes, omega 3 fatty acids are the healthy fats and fish is great source
         but they can also be found in plants. Did you know there are different
