--- a/app/views/welcome/services.html.erb
+++ b/app/views/welcome/services.html.erb
@@ -1,72 +1,67 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <div class="features">
-      <article>
-        <div class="paddingleft">
-        <p>
-          Essential Nutrition is a participating provider with the insurance
-          companies listed below. We suggest you call your insurance company to
-          find out if nutrition counseling is covered in your plan. Please call or
-          email us to get more information about cost.
-          <li>Blue Cross Blue Shield</li>
-          <li>Duke Basic/Duke Select</li>
-          <li>Coventry</li>
-        </p>
-        </div>
-      </article>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+</head>
+<body>
 
-      <article>
-        <div class="paddingleft">
-        <p>
-          Below are some of the more common nutrition issues that we have helped.
-          <li>Weight Management</li>
-            <ul>Achieve a healthier weight without deprivation.</ul>
-          <li>Eating Disorders</li>
-            <ul>Normalize eating and develop a healthy relationship with food.</ul>
-          <li>Cholesterol</li>
-            <ul>Lower your blood cholesterol and improve your lipid profile.</ul>
-          <li>High Blood Pressure</li>
-            <ul>Improve your blood pressure and lower your risk of stroke and heart disease through improved nutritional choices</ul>
-          <li>Diabetes</li>
-            <ul>Improve your blood sugar management through carbohydrate counting, exchange lists or meal plans</ul>
-          <li>Athletic Performance</li>
-            <ul>Enhance your endurance for training and competition</ul>
-          <li>Osteoporosis</li>
-            <ul>Optimize your bone health by assuring an intake of adequate nutrients</ul>
-          <li>Cancer</li>
-            <ul>Decrease your risk or get help managing symptoms of cancer and its treatments</ul>
-          <li>Family Meals</li>
-            <ul>Help your family to be healthy, happy eaters who enjoy food and meals</ul>
-          <li>Digestion/Absorption</li>
-            <ul>Food intolerances, irritable bowel syndrome, inflammatory bowel disease, celiac disease. Specializing in FODMAP elimination</ul>
-          <li>Enteral and Parenteral Nutrition</li>
-            <ul>Support for patients on nutritional support</ul>
-        </p>
-      </div>
-      </article>
-      <article>
-        <div class="paddingleft">
-        <p>
-          Essential Nutrition works with adults, children, teens and families.
-          We believe that food and eating are important parts of our lives and should
-          be enjoyed but should not generally rule or control us. For most people,
-          healthy eating can be flexible.
-        </p>
-        <p>
-          Services include
-          <li>Individual or Group Counseling</li>
-          <li>Wellness Coaching</li>
-          <li>Grocery Store Tours</li>
-        </p>
-      </div>
-      </article>
-
-
+  <div class="container">
+    <div class="left-div left-text services">
+      <p>
+        Essential Nutrition is a participating provider with the insurance
+        companies listed below. We suggest you call your insurance company to
+        find out if nutrition counseling is covered in your plan. Please call or
+        email us to get more information about cost.
+        <li>Blue Cross Blue Shield</li>
+        <li>Duke Basic/Duke Select</li>
+        <li>Coventry</li>
+      </p>
     </div>
-  </body>
+    <div class="right-div right-text services">
+      <p>
+        Essential Nutrition works with adults, children, teens and families.
+        We believe that food and eating are important parts of our lives and should
+        be enjoyed but should not generally rule or control us. For most people,
+        healthy eating can be flexible.
+      </p>
+      <p>
+        Services include
+        <li>Individual/Group Counseling</li>
+        <li>Wellness Coaching</li>
+        <li>Grocery Store Tours</li>
+      </p>
+    </div>
+
+    <div class="bottom-div">
+
+      <p>
+        Below are some of the more common nutrition issues that we have helped.
+        <li>Weight Management</li>
+        <ul>Achieve a healthier weight without deprivation.</ul>
+        <li>Eating Disorders</li>
+        <ul>Normalize eating and develop a healthy relationship with food.</ul>
+        <li>Cholesterol</li>
+        <ul>Lower your blood cholesterol and improve your lipid profile.</ul>
+        <li>High Blood Pressure</li>
+        <ul>Improve your blood pressure and lower your risk of stroke and heart disease through improved nutritional choices</ul>
+        <li>Diabetes</li>
+        <ul>Improve your blood sugar management through carbohydrate counting, exchange lists or meal plans</ul>
+        <li>Athletic Performance</li>
+        <ul>Enhance your endurance for training and competition</ul>
+        <li>Osteoporosis</li>
+        <ul>Optimize your bone health by assuring an intake of adequate nutrients</ul>
+        <li>Cancer</li>
+        <ul>Decrease your risk or get help managing symptoms of cancer and its treatments</ul>
+        <li>Family Meals</li>
+        <ul>Help your family to be healthy, happy eaters who enjoy food and meals</ul>
+        <li>Digestion/Absorption</li>
+        <ul>Food intolerances, irritable bowel syndrome, inflammatory bowel disease, celiac disease. Specializing in FODMAP elimination</ul>
+        <li>Enteral and Parenteral Nutrition</li>
+        <ul>Support for patients on nutritional support</ul>
+      </p>
+    </div>
+
+  </div>
+</body>
 </html>
