--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,9 @@
   <title>Essential Nutrition</title>
   <%= csrf_meta_tags %>
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+<link href="./app/assets/stylesheets/nutritiontips" media="screen" rel="stylesheet" />
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <!-- <link rel="stylesheet" type="text/css" href="./app/assets/stylesheets/nutritiontips.css"> -->
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
   <body>
