--- a/app/views/welcome/aboutus.html.erb
+++ b/app/views/welcome/aboutus.html.erb
@@ -1,46 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <div class="card-grid">
-      <div class="card-wrap">
-        <div class="card">
-          <img src="http://i.imgur.com/Xyat8pA.jpg" class="card-img"/>
-          <div>
-            <h4>Kay Pratt</h4>
-            <p>      Bachelor of Science Degree in Food Science and Nutrition from Colorado State University
-                  Master of Science Degree in Human Nutrition from The Ohio State University
-                  Kay is a Registered Dietitian, a Licensed Dietitian Nutritionist,
-                  a Certified Wellness Coach, and a Certified Nutrition Support Clinician.
-                  Kay has worked in the field of nutrition for over 25 years. She has worked in
-                  the field of dietetics for over 20 years. She has worked at UNC and Duke Hospitals,
-                  has worked in the area of home health, wellness and in academics. She has worked with adults,
-                  premature babies, pediatrics and adolescents.</p>
-          </div>
-        </div>
-      </div>
-      <div class="card-wrap">
-        <div class="card">
-          <img src="http://i.imgur.com/rnVZGwy.jpg" class="card-img"/>
-          <div>
-            <h4>Susan Lutz</h4>
-            <p>Bachelor of Science Degree in Nutrition from Iowa State University
-            Doctorate in Public Health Nutrition from University of North Carolina at Chapel Hill
-            Susan is a Registered Dietitian and a Licensed Dietitian Nutritionist.
-            She completed her internship at the Mayo Medical Complex in Rochester, Minnesota.
-            Susan specializes in working with kids and teens.</p>
-          </div>
-        </div>
-      </div>
+<head>
+  <meta charset="utf-8">
+  <title></title>
+</head>
+<body>
 
-  </div>
+  <div class="container">
+    <div class="left-div left-text">
+      <img src="http://i.imgur.com/Xyat8pA.jpg" class="card-img"/>
+      Bachelor of Science Degree in Food Science and Nutrition from Colorado State University
+      Master of Science Degree in Human Nutrition from The Ohio State University
+      Kay is a Registered Dietitian, a Licensed Dietitian Nutritionist,
+      a Certified Wellness Coach, and a Certified Nutrition Support Clinician.
+      Kay has worked in the field of nutrition for over 25 years. She has worked in
+      the field of dietetics for over 20 years. She has worked at UNC and Duke Hospitals,
+      has worked in the area of home health, wellness and in academics. She has worked with adults,
+      premature babies, pediatrics and adolescents.
     </div>
-
-
-
-
-  </body>
+    <div class="right-div right-text">
+      <img src="http://i.imgur.com/rnVZGwy.jpg" class="card-img" width="400"/>
+      Bachelor of Science Degree in Nutrition from Iowa State University
+      Doctorate in Public Health Nutrition from University of North Carolina at Chapel Hill
+      Susan is a Registered Dietitian and a Licensed Dietitian Nutritionist.
+      She completed her internship at the Mayo Medical Complex in Rochester, Minnesota.
+      Susan specializes in working with kids and teens.
+    </div>
+  </div>
+</body>
 </html>
