redid the about us image of kay

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -167,6 +167,12 @@ nav {
 // end nav bar ------------------====================----------------------end nav bar
 
 //about us      ---------------------------------------------------  about us
+.kays-img {
+  height: 300px;
+  padding-left: 3.5em;
+  padding-right: 3.5em;
+
+}
 .container
 {
   text-align: center;
