--- a/app/views/welcome/aboutus.html.erb
+++ b/app/views/welcome/aboutus.html.erb
@@ -8,7 +8,7 @@
 
   <div class="container">
     <div class="left-div left-text">
-      <img src="http://i.imgur.com/Xyat8pA.jpg" class="card-img"/>
+      <img src="http://i.imgur.com/Xyat8pA.jpg" class="card-img kays-img"/>
       Bachelor of Science Degree in Food Science and Nutrition from Colorado State University
       Master of Science Degree in Human Nutrition from The Ohio State University
       Kay is a Registered Dietitian, a Licensed Dietitian Nutritionist,
